--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -30,8 +30,7 @@
       "Classification",
       "Image",
       "Unclassified",
-      "Stade",
-      "Compte"
+      "Stade"
     ],
     "entitySuffix": "",
     "incrementalChangelog": true,
